# pyjuter

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  docs.yaml
ci/: ci.sh  mypy.ini  requirements.txt
ci/mkdocs/: mkdocs.yml
ci/tests/: README.md  requirements.txt  run-tests.sh
ci/tests/corrupt-shim/: mess_up_nb.py  test.sh
ci/tests/corrupt-shim/in/: main.py
ci/tests/import/: test.sh
ci/tests/import/in/: lib.py
ci/tests/roundtrip/: test.sh
ci/tests/roundtrip/in/: lib2.py
docs/: CLI.md  Design.md  generate-cmdline-usage.sh
pyjuter/: cli.py  conversion.py  module.py  shims.py
src/pyjuter/: __main__.py  cli.py  module.py  shims.py
tests/: README.md  requirements.txt  run-tests.sh
tests/roundtrip/in/: another_lib.py  lib1.py  main.py
